new file:   lib/custom_navbar.dart 	new file:   lib/login_page_23_april.dart 	modified:   lib/main.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts:
   lottie:
+  water_drop_nav_bar:
+  google_nav_bar:
+  animated_text_kit:
+  flutter_animate:
 
 
 dev_dependencies:
